--- a/view-model-demo/app/src/main/res/layout/activity_main.xml
+++ b/view-model-demo/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,11 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="19dp"
         android:text="MainActivity!"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="272dp" />
+        tools:layout_editor_absoluteY="48dp" />
 
     <Button
         android:id="@+id/button"
